# AIChatRouter-CLI

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py
aichatrouter/: __init__.py  chat.py  config.py  cost_tracker.py  providers.py  router.py  tui.py  utils.py
tests/: test_config.py  test_router.py  test_utils.py
